--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.17.3",
     "flash": "^1.1.0",
     "moment": "^2.29.4",
+    "mongodb": "^4.11.0",
     "mongoose": "^5.9.25",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
